--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     
   </head>
   <body>
-    <p>Please open console tab.</p>
     <object id="Jazz1" classid="CLSID:1ACE1618-1C7D-4561-AEE1-34842AA85E90" class="hidden">
       <object id="Jazz2" type="audio/x-jazz" class="hidden">
         <p style="visibility:visible;">This page requires <a href=http://jazz-soft.net>Jazz-Plugin</a> ...</p>
@@ -35,12 +34,15 @@
 	<button id="stopButton">Stop</button>
 	<button id="playButton">Play</button>
     <button id="nextButton">Next track</button>
+	<label id="volumeDisplay">Volume: 100/100</label>
+	<input id="volumeSlider" type="range" min="0" max="100" value="100"/>
   </body>
   <script type="text/javascript">
 	  var autoplay = false;
 	  // Default score
       var scoreId = '39069';
       var scoreSecret = '123f429e59';
+	  var volume = 100;
 	  
       // Load Jazz plugin
       var Jazz = document.getElementById("Jazz1"); if(!Jazz || !Jazz.isJazz) Jazz = document.getElementById("Jazz2");
@@ -78,7 +80,7 @@
           if(Jazz.isJazz && data.message != undefined) {
             (data.message==128) ? data.message=0x80 : data.message=0x90;
             if (data.velocity == undefined) data.velocity =0;
-            Jazz.MidiOut(data.message,data.note,data.velocity);  
+            Jazz.MidiOut(data.message,data.note,data.velocity*volume/100);  
           }
         });
 		if(autoplay)
@@ -100,6 +102,7 @@
 	  $('#playButton').click(togglePlay);
 	  $('#nextButton').click(playNext);
 	  $('#channelSelect').change(onChannelChange);
+	  $('#volumeSlider').change(onVolumeChange);
 	  
 	  function toggleAutoPlay() {
 		autoplay = !autoplay;
@@ -127,6 +130,11 @@
         console.log("Selected MIDI OUT: " + $('#channelSelect option:selected').text());
       }
       catch(err){ console.log('error:'+err);}
+	  }
+	  
+	  function onVolumeChange() {
+		volume = $('#volumeSlider').val();
+		$('#volumeDisplay').html('Volume: '+volume+'/100');
 	  }
 	  
     </script>
