--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	<title>Pianolive administration panel</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="./js/Color/SpaceW3.js" type="text/javascript"></script>
      <script src="./js/MIDI/AudioDetect.js" type="text/javascript"></script>
@@ -19,7 +20,6 @@
      <!-- extras -->
      <script src="./inc/Base64.js" type="text/javascript"></script>
      <script src="./inc/base64binary.js" type="text/javascript"></script>
-    
   </head>
   <body>
     <object id="Jazz1" classid="CLSID:1ACE1618-1C7D-4561-AEE1-34842AA85E90" class="hidden">
