--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
      <!-- extras -->
      <script src="./inc/Base64.js" type="text/javascript"></script>
      <script src="./inc/base64binary.js" type="text/javascript"></script>
+     <style type="text/css">
+      .hidden {
+       visibility: hidden;
+       width: 0px;
+       height: 0px;
+       margin: 0px;
+       padding: 0px;
+       border-style: none;
+       border-width: 0px;
+       max-width: 0px;
+       max-height: 0px;
+      }
+    </style>
+
   </head>
   <body>
     <object id="Jazz1" classid="CLSID:1ACE1618-1C7D-4561-AEE1-34842AA85E90" class="hidden">
@@ -63,6 +77,10 @@
 
       function playNext() {
         MIDI.Player.stop();
+        /*
+        Debug MIDI:
+        MIDI.Player.loadFile('http://static.musescore.com/39069/123f429e59/score.mid', onFileLoaded);
+        */
         var askNextSong = setInterval(function(){
           $.getJSON('http://steinwayradio.herokuapp.com/playlist/pop', function(data) {
             if(data != undefined) {
@@ -78,9 +96,16 @@
       function onFileLoaded() {
         MIDI.Player.addListener(function(data) {
           if(Jazz.isJazz && data.message != undefined) {
-            (data.message==128) ? data.message=0x80 : data.message=0x90;
-            if (data.velocity == undefined) data.velocity =0;
-            Jazz.MidiOut(data.message,data.note,data.velocity*volume/100);  
+            if(data.message==128) {
+              Jazz.MidiOut(0x80,data.note);
+            }
+            else if(data.message==144) {
+              Jazz.MidiOut(0x90,data.note,data.velocity*volume/100);
+            }
+            else if(data.message==176) {
+              console.log("pedal level:"+data.velocity);
+              Jazz.MidiOut(0xB0,64,data.velocity);
+            }
           }
         });
 		if(autoplay)
